--- a/MemeApp/Info.plist
+++ b/MemeApp/Info.plist
@@ -34,5 +34,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Test Message - Camera</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Test Message - Album</string>
 </dict>
 </plist>
